# movie-rater-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.debug.yml  docker-compose.yml  env-sample  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 1e33feaefa51_create_rating_table.py  2e2154fb2d88_create_main_tables.py
app/: app.py  main.py
app/api/dependencies/: auth.py
app/api/v1/: api.py
app/api/v1/endpoints/: movies.py  ratings.py  tokens.py  users.py  weekly_movies.py
app/core/: config.py  deps.py
app/crud/: core.py  ratings.py  users.py
app/db/: deps.py
app/proxy/: deps.py  tmdb_api.py
app/schemas/: core.py  movie.py  rating.py  token.py  user.py
app/services/: __init__.py  authentication.py
tests/: conftest.py  test_app.py
tests/api/: core.py  test_ratings.py  test_users.py
