[tool.poetry]
name = "movie-rater-backend"
version = "0.1.0"
description = ""
authors = ["Baptiste GAZE <bpt.gaze@gmail.com>"]
packages = [
    { include = 'app' }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
aiohttp = "^3.8.1"
pytest-asyncio = "^0.18.3"
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"
databases = {extras = ["postgresql"], version = "^0.5.5"}
psycopg2 = "^2.9.3"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = {version = "*", allow-prereleases = true}
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'app.main:__main__'
