[tool.poetry]
name = "movie-rater-backend"
version = "1.0.0"
description = ""
authors = ["Baptiste GAZE <bpt.gaze@gmail.com>"]
packages = [
    { include = 'app' }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
aiohttp = "^3.8.1"
pytest-asyncio = "^0.18.3"
SQLAlchemy = "^1.4.35"
alembic = "^1.8.0"
databases = {extras = ["postgresql"], version = "^0.5.5"}
psycopg2 = "^2.9.3"
email-validator = "^1.1.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
PyJWT = "^2.4.0"
python-multipart = "^0.0.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
asgi-lifespan = "^1.0.1"
black = {version = "*", allow-prereleases = true}
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'app.main:__main__'
create_admin = 'app.main:create_admin'
